--- a/.github/workflows/bienvenida.yml
+++ b/.github/workflows/bienvenida.yml
@@ -34,3 +34,6 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      
+      - name: Hello!
+        run: date +%Y-%m-%d:%H:%M:%S
